fix a glitch with weird character quotes that was breaking the viewport meta tag

--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name=”viewport” content=”width=device-width, initial-scale=1″>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="Edgewise.js"></script>
 <link rel='stylesheet' href='Edgewise.css'>
 </head>
